<resources>
    <string name="app_name">FoodDecider</string>
    <string name="version_app">Wersja aplikacji: %s (%s)</string>

    <string name="channel_notification_info">Kanał informacyjny</string>

    <string name="sing_in">Zaloguj się</string>
    <string name="sing_up">Zarejestruj się</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="ok">OK</string>

    <string name="invalid_format">Niepoprawny format</string>
    <string name="too_short">Za krótkie</string>
    <string name="passwords_not_same">Hasło i powtórzenie hasła nie są takie same!</string>

    <string name="cannot_sing_in">Nie można się zalogować</string>

    <string name="firebase_user_not_exist">Nie ma takiego użytkownika</string>
    <string name="firebase_user_collision">Taki użytkownik już istnieje</string>
    <string name="firebase_invalid_credentials">Niepoprawne dane logowania</string>
    <string name="firebase_unknown">Bład serwera. Spróbuj ponownie później.</string>
    <string name="error_unknown">Bład serwera. Spróbuj ponownie później.</string>

    <string name="bottom_nav_draw_label">Losowanie</string>
    <string name="bottom_nav_list_label">Potrawy</string>
    <string name="bottom_nav_templates_label">Propozycje</string>

    <string name="randomize_food_click">Kliknij, aby wylosować propozycje potrawy</string>
    <string name="randomize_food_image_click">Kliknij w obrazek, aby wylosować propozycje potrawy</string>
    <string name="randomize_food_loading">Losowanie w trakcie</string>

    <string name="list_foods_title">List potraw do losowania</string>
    <string name="list_foods_no_foods">Brak zapisanych potraw</string>

    <string name="templates_title">Lista propozycji</string>
    <string name="templates_no_templates">Brak propozycji do wyświetlenia</string>
    <string name="templates_template_no_exist">Propozycja nie istnieje</string>
    <string name="templates_to_add_list">Potrawy do dodania</string>
    <string name="templates_added_list">Potrawy już w twojej liście</string>
    <string name="templates_add_food_template">Dodaj potrawę o nazwie %s</string>

    <string name="content_description_toggle_password">Przełącz widoczność hasła</string>

    <string name="count_template">Potraw: %d</string>
    <string name="food_name">Nazwa potrawy</string>
    <string name="add">Dodaj</string>
    <string name="logout">wyloguj</string>
    <string name="send_link">Wyślij link</string>

    <string name="cannot_sing_in_user">Nie można się zalogować</string>
    <string name="reset_password">Zapomniałeś hasła?</string>
    <string name="reset_password_title">Podaj email powiązany z twoim kontem.</string>
    <string name="reset_password_description">Wyślemy Ci email, umożliwiający resetowanie hasła.</string>
    <string name="no_account">Nie masz konta? Zarejestruj się</string>

    <string name="cannot_singup_user">Nie można zarejestrować</string>
    <string name="send_email_verification_title">Wysłano email weryfikujący</string>
    <string name="send_email_verification">Na podany adres wysłano email weryfikujący. Potwierdź go, aby móc się zalogować do aplikacji.</string>
    <string name="singup_user_success">Pomyślnie utworzono użytkownika</string>
    <string name="firebase_user_not_verify">Email nie został zweryfikowany</string>
    <string name="send_email_button">Wyślij email weryfikujący ponownie</string>

    <string name="credits">Specjalne podziękowania</string>
    <string name="photos_in_app">Zdjęcia z propozycji potraw.</string>
    <string name="authors">Autorzy:</string>
    <string name="icons_in_app">Ikony z Material Design oraz FlatIcon. Niektóre ikony zostały przerobione na własne potrzeby.</string>
    <string name="new_actions_in_app">Nowe funkcjonalności zostały dodane</string>

    <string name="add_new_list">Dodaj listę</string>
    <string name="list_name">Nazwa listy</string>
    <string name="list_name_collision">Lista o takiej nazwie już istnieje</string>
</resources>