...
class DatabaseRepoImpl(
    private val firebaseHelper: FirebaseHelper,
    private val firebaseAuthHelper: FirebaseAuthHelper
) : DatabaseRepo {

    private val list: ArrayList<String> = arrayListOf(
        "food 1",
        "food 2",
        "food 3",
        "food 4",
        "food 5",
        "food 6"
    )
...
